--- a/dropdown/src/global.scss
+++ b/dropdown/src/global.scss
@@ -3,7 +3,9 @@
   --main-font-family: 'Inter';
   --font-size-m: 16px;
   --font-size-s: 14px;
+  --font-size-xs: 12px;
   --font-line-height: 20px;
+  --font-line-height-s: 12px;
   --font-color: #333333;
   --color-light-gray: #c1c1c1;
   --color-lightest-gray: #f4f4f4;
